# lazyjson

./: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.py  conanfile.py
.github/workflows/: main.yml
profiles/: linux  windows
src/: CMakeLists.txt
src/lazyjson/: array.hpp  element.hpp  json.hpp  lazyjson.h  parser.hpp  variant.hpp
src/tests/: CMakeLists.txt  custom_allocator.cpp  custom_allocator.hpp  json.cpp  test.cpp  variant.cpp
